[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtutmo"
version = "2.0.1"
description = "DTU Tone Mapping Operator (DTUTMO)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Thierry Silvio Claude Soreze" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
]

[project.optional-dependencies]
torch = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]

dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dtutmo*"]
